2015-06-29  Hunseop Jeong  <hs85.jeong@samsung.com>

        Unreviewed EFL gardening on 29th Jun.
        https://bugs.webkit.org/show_bug.cgi?id=146409

        Remove the duplicated results and rebaseline the missing tests.

        * platform/efl/TestExpectations:
        * platform/efl/editing/execCommand/paste-1-expected.txt: Added.
        * platform/efl/printing/single-line-must-not-be-split-into-two-pages-expected.txt: Added.

2015-06-28  Gyuyoung Kim  <gyuyoung.kim@webkit.org>

        [EFL] Unreviewed add new baseline for missing tests

        Some tests need to have own test expectations for EFL port.

        * platform/efl/TestExpectations:
        * platform/efl/accessibility/auto-filled-value-expected.txt: Added.
        * platform/efl/accessibility/img-fallsback-to-title-expected.txt: Added.
        * platform/efl/accessibility/internal-link-anchors2-expected.txt: Added.
        * platform/efl/accessibility/math-multiscript-attributes-expected.txt: Added.
        * platform/efl/accessibility/meter-element-expected.txt: Added.
        * platform/efl/compositing/iframes/invisible-nested-iframe-show-expected.txt: Added.
        * platform/efl/compositing/iframes/resizer-expected.txt: Added.
        * platform/efl/compositing/layer-creation/fixed-position-scroll-expected.txt: Added.
        * platform/efl/compositing/overflow/composited-scrolling-creates-a-stacking-container-expected.txt: Added.
        * platform/efl/compositing/tiling/huge-layer-add-remove-child-expected.txt: Added.
        * platform/efl/compositing/tiling/rotated-tiled-preserve3d-clamped-expected.txt: Added.
        * platform/efl/css2.1/t1604-c542-letter-sp-00-b-a-expected.txt: Added.
        * platform/efl/css3/flexbox/flexbox-baseline-margins-expected.txt: Added.
        * platform/efl/editing/selection/contains-boundaries-expected.txt: Added.
        * platform/efl/editing/selection/mixed-editability-10-expected.txt: Added.